# T3-programmable-controller-on-ESP32

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  Tstat11_Snippets.ipynb  bbmd_implementplan.md  sdkconfig  sdkconfig.defaults  sdkconfig.old  temco.sln  temco.vcxproj  temco.vcxproj.filters  temco_partitions.csv  temco_partitions.cvs
.github/workflows/: build.yml  unit_tests.yml
AI_WorkFlow/: Tstat11_Snippets.ipynb  Tstat11_Snippets.py
Documents/: Bacnet COV Guide.md  BacnetFlow.md  HUB2_A7608_MODEM_BLOCK_DIAGRAM.html  HUB2_A7608_MODEM_INTEGRATION.md  HUB2_A7608_MODEM_TODO.html  HUB2_A7608_Modem_Integration_Plan.docx  How to compile.txt  T3_Contorller_SNMP-BACnet_Integration_Documentation_v0.1.docx  test_output_6_17_26.txt
Documents/Plan/: HUB2_A7608_MODEM_INTEGRATION.md
Documents/SNMP_Mapping_Specifications/: ModbusBacnetRegistersListRev63.xlsx  T3 Controller SNMP MIB Definition v5.0.docx
Documents/Test/: test2_output_6_17_26.txt
T3-nano-stm/: .mxproject  T3-nano-stm.ioc
T3-nano-stm/MDK-ARM/: T3-nano-stm.uvguix.Administrator  T3-nano-stm.uvoptx  T3-nano-stm.uvprojx  startup_stm32f030x8.lst
TemcoAPP/: TemcoAPP.sln
Unit_Test/: Makefile  README.md  test_bacnet_codecs.c  test_bacnet_objects.c  test_extra_apis.c  test_io_control.c  test_math_drivers.c  test_modbus.c  test_mqtt.c  test_rtc_time.c  test_runner.c  test_sensors.c  test_system_data.c  verified_apis.md
Unit_Test/mocks/: ctest.h  esp_adc_cal.h  esp_app_format.h  esp_attr.h  esp_err.h  esp_eth.h  esp_event.h  esp_event_loop.h  esp_flash.h  esp_flash_spi_init.h  esp_heap_caps.h  esp_http_client.h  esp_https_ota.h  esp_log.h  esp_netif.h  esp_netif_ip_addr.h  esp_ota_ops.h  esp_partition.h  esp_rom_sys.h  esp_sleep.h  esp_sntp.h  esp_spi_flash.h  esp_system.h  esp_timer.h  esp_wifi.h  esp_wireguard.h  led_strip.h  lvgl.h  mock_esp_idf.c  mock_freertos.c  mock_hardware.c  mock_itoa.c  mock_itoa.h  mock_lvgl.c  mock_user_data.c  mqtt_client.h  nvs.h  nvs_flash.h  sdkconfig.h  sntp.h  (+2 more)
bacnet/: abort.c  address.c  apdu.c  automac.c  bacaddr.c  bacdcode.c  bacdevobjpropref.c  bacfile.h  bacint.c  bacstr.c  bactimevalue.c  bi.h  bip.c  bvlc.c  cov.c  datalink.c  datetime.c  dcc.c  dlenv.c  dlmstp.c  dlmstp_new.c  fifo.c  h_awf.c  h_cov.c  h_dcc.c  h_npdu.c  h_rpm.c  h_rr.c  h_rr_a.c  h_whois.c  h_wp.c  handlers.h  iam.c  noserv.c  proplist.h  ptransfer.c  readrange.c  ringbuf.c  rp.c  rs485.c  (+11 more)
components/snmp_agent/: CMakeLists.txt
docs/: BBMD-Implementation-Plan.md  bbmd-technical-architecture.md
driver/: adc.c  i2c.c  i2s.c  ledc.c  rmt.c  spi_common.c  spi_slave.c  spi_slave_hd.c  uart.c
driver/esp32/: touch_sensor.c
driver/esp32c3/: adc.c
driver/test/: test_adc2_with_wifi.c  test_adc_common.c  test_dac.c  test_gpio.c  test_i2c.c  test_i2s.c  test_ledc.c  (+4 more)
main/: .cproject  AppMain.c  CMakeLists.txt  CMakeLists.txt.bak  DisFonts.c  DisHomeScreen.c  DisSymbol.c  Dis_color_def.h  INA228.c  INA228.h  Kconfig.projbuild  LCD_TSTAT.h  LS_LED.c  LcdTheme.h  LightSwitch.c  Light_pwm.c  LiquidCrystal_I2C.h  MATTER_LIGHT_INTEGRATION.md  MONITOR.H  Menu.c  Menu.h  ProductModel.h  ProjectConfig.h  a7608.c  a7608.h  ade7953.c  ade7953.h  airlab.c  airlab.h  app_driver.cpp  app_main.c  ble_mesh.c  ble_mesh.h  bmv080.h  bmv080_defs.h  co2.c  co2.h  co2_cal.c  co2_cal.h  commsub.c  (+111 more)
main/HUB_Module/: a7608.c  a7608.h  hub_lte_pppos.c  hub_lte_pppos.h  hub_module.c  hub_module.h  hub_network_manager.c  hub_network_manager.h  hub_w5500.c  hub_w5500.h
main/LCD_Driver/: font.h  image1.c  image2lcd.c  image2lcd.h  lcd_drv.c  lcd_drv.h  lcd_task.c  lcd_task.h  lv_UserPeram.c  lv_UserPeram.h  touch_drv.c  touch_drv.h
main/Matter/: CMakeLists.txt  MATTER_SETUP_GUIDE.md  app_priv.h  matter_tstat.cpp  matter_tstat.cpp.bak  matter_tstat.h
main/Mqtt_Handler/: Mqtt_Application_Implementation.md  Mqtt_Handler.c  Mqtt_Handler.h  Mqtt_User_Guide.md
main/TemcoScreen/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ChangeConfig.c  ui_ChangeConfig.h  ui_HolidayCalenderScreen.c  ui_HolidayCalenderScreen.h  ui_HomeScreen.c  ui_HomeScreen.h  ui_Keypad.c  ui_Keypad.h  ui_MainMenu.c  ui_MainMenu.h  ui_NetworkConfig.c  ui_NetworkConfig.h  ui_Parameters.c  ui_Parameters.h  ui_Protocols.c  ui_Protocols.h  ui_ScheduleEditScreen.c  ui_ScheduleEditScreen.h  ui_ScheduleScreen.c  ui_ScheduleScreen.h  ui_StartUpScreen.c  ui_StartUpScreen.h  ui_Time.c  ui_Time.c.bak  ui_Time.h  ui_WifiConfig.c  ui_WifiConfig.h  ui_comp_hook.c  ui_events.c  ui_events.h  ui_font_Arial80.c  ui_helpers.c  ui_helpers.h  ui_img_1020677502.c  ui_img_1207302323.c  ui_img_1589547977.c  (+15 more)
main/WireGuard_App/: WireGuard_App.c  WireGuard_App.h
main/__history/: tcp_server.c.~1~
scripts/: README.md  read_T3_input.bat  read_T3_output.bat  read_T3_variable.bat  read_write_T3_output.bat  read_write_T3_variable.bat  test_logs.txt
server_certs/: smtp2go.crt
temco_IO_control/: CMakeLists.txt
temco_bacnet/: CMakeLists.txt  Kconfig  Kconfig.projbuild  component.mk  user_data.h
temco_bacnet/RPi/: CMakeLists.txt
temco_bacnet/include/: address.h  ai.h  ao.h  av.h  bacapp.h  bacdef.h  bacenum.h  bacfile.h  bacnet.h  bi.h  bip.h  bo.h  bv.h  bvlc.h  calendar.h  client.h  cov.h  datalink.h  datetime.h  dcc.h  define.h  device.h  handlers.h  mstpdef.h  msv.h  net.h  proprietary.h  readrange.h  schedule.h  timestamp.h  trendlog.h  trendlog_mul.h  txbuf.h  types.h
temco_bacnet/private/: BASIC.H  MONITOR.C  MONITOR.H  POINT.C  POINT.H  alarm.c  alarm.h  bac_control.c  bac_interface.c  bac_point.C  bac_point.H  bac_point.c  bac_point.h  basic.h  bip.c  decode.c  e2prom.h  monitor.c  point.c  ptransfer.c  rs485.c  ud_str.h  user_data.c  user_data.h
temco_bacnet/src/: address.c  ai.c  ao.c  apdu.c  arf.c  av.c  bacapp.c  bacfile.c  bacpropstates.c  bacreal.c  bacstr.c  bi.c  bo.c  bv.c  bvlc.c  calendar.c  cov.c  datalink.c  datetime.c  device.c  dlenv.c  dlmstp.c  fifo.c  h_arf.c  h_ccov.c  h_cov.c  h_getevent.c  h_iam.c  h_npdu.c  h_rp.c  h_ts.c  h_ucov.c  h_whohas.c  h_whois.c  h_wp.c  h_wpm.c  mstp.c  msv.c  npdu.c  proplist.c  (+18 more)
(+84 files in other folders)
