idf_component_register(			SRCS
							"tcp_server.c"
							"modbus.c"
#							"deviceparams.c"
							"i2c_task.c"
							"ota.c"
#							"microphone.c"
							"wifi.c"
							"sgp30_featureset.c"
							"sensirion_common.c"
							"sgp30.c"
							"ethernet_task.c"
							"HUB_Module/hub_module.c"
							"HUB_Module/hub_lte_pppos.c"
							"HUB_Module/hub_network_manager.c"
							"HUB_Module/hub_w5500.c"
							"flash.c"
							"pro_info.c"
#							"scd40.c"
							"store.c"
							"led_pwm.c"
							"inputs.c"
							"outputs.c"
							"io.c"
							"mlx90632.c"
							"mlx90632_extended_meas.c"
							"rtc.c"
							"timegm.c"
							"sht4x.c"
							"sht3x.c"
							"scd4x_i2c.c"
							"scan.c"
							"commsub.c"
							"ade7953.c"
							"lcd.c"
#							"pic.c"
							"smtp_client.c"
							"airlab.c"
							"LightSwitch.c"
							"LS_LED.c"
							"INA228.c"
							"mppt_task.c"
#							"spi_master_arm.c"
#							"ble_mesh.c"
							"Menu.c"
							"menuIdle.c"
							"menuMain.c"
						#	"Constcode.c"
							"menuSet.c"
						#	"menuDaySet.c"
							"sntp_app.c"
							"multiMeter.c"
							"mm_spi.c"
							"hy3131_sw.c"
							"Light_pwm.c"
					#		"ddns.c"
						#	"lowPower.c"
							"co2.c"
							"lora.c"
							"HUB_Module/a7608.c"
							"LcdTheme.c"
							"DisHomeScreen.c"
							"DisFonts.c"
							"DisSymbol.c"
							"LCD_Driver/lcd_drv.c"
							"LCD_Driver/lcd_task.c"
							"LCD_Driver/touch_drv.c"
							"LCD_Driver/lv_UserPeram.c"
							"usb_cdc.c"

						#	EMBED_TXTFILES server_root_cert.pem esp_logo.png
#							EMBED_TXTFILES ${project_dir}/server_certs/smtp2go.crt
			INCLUDE_DIRS "."
							"HUB_Module"
							"LCD_Driver"
							"TemcoScreen"
							)

# Auto-include all .c files from TemcoScreen subdirectory
file(GLOB TEMCO_SCREEN_SOURCES "TemcoScreen/*.c")
target_sources(${COMPONENT_LIB} PRIVATE ${TEMCO_SCREEN_SOURCES})

#                    		EMBED_TXTFILES ${project_dir}/server_certs/ca_cert.pem)
set(COMPONENT_ADD_INCLUDEDIRS "." "HUB_Module")

target_link_libraries(${COMPONENT_TARGET} "-u pro_info")
